put overview to the top + small improvements

--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -135,7 +135,7 @@
   "You’re in good company": "You’re in good company",
   "Many successful companies already use Ledgy to manage their ownership.": "Many successful companies already use Ledgy to manage their ownership.",
   "Find out why they trust us": "Find out why they trust us",
-  "Ledgy is free.": "Ledgy is free.",
+  "Ledgy is free": "Ledgy is free",
   "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.",
   "If you came here looking for fancy option plans, we got you covered:": "If you came here looking for fancy option plans, we got you covered:",
   "3 Dude(tte)s in a Garage": "3 Dude(tte)s in a Garage",
