--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,4 +1,52 @@
 {
+  "We’re hiring!": "",
+  "Many successful companies already use Ledgy to manage their ownership": "",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not nice, so we give an overview up-front.": "",
+  "What we may collect and why": "",
+  "User information": "",
+  "Name, email, encrypted password and any other details you provide": "",
+  "Usage statistics": "",
+  "Name, time, and which features you use to understand and improve our service": "",
+  "Browser information": "",
+  "Company name, and other company details. To properly use our Service you may enter the share ledger transactions and other cap table details.": "",
+  "How we protect your information": "",
+  "We live up to highest security standards. We improve them continuously. <0>Check out what we do  <1/></0>": "",
+  "User information, usage statistics and browser information": "",
+  "We limit access and sharing as much as reasonably possible.": "",
+  "Nobody has any access to the company information you provide.": "",
+  "Who we share your information with": "",
+  "Third Party Contractors": "",
+  "Which we use to run and improve our Service for you. This excludes company information. <0>See which ones below <1/></0>": "",
+  "If you add them with their email address and they decide to sign up on Ledgy, shareholders can see their stake in your company and its latest valuation.": "",
+  "The details": "",
+  "Ledgy AG (“Ledgy”, “we”) is a technology company that provides software as a service (“Service”) to you, its customers. This Privacy Policy describes how we collect and use personal information (“Personal Data”) for providing our Service and operating our website. It also describes your choices and how you can get in touch with us.": "",
+  "When you decide to sign up on Ledgy": "",
+  "We may collect user information, usage statistics and browser information (“Personal Data”) as outlined above. To use our Service at its best, you may enter the share ledger transactions and other cap table details. Please note: We strictly separate Personal Data from company information. Nobody has any access to your company information.": "",
+  "We only use this Personal Data to provide you with our Service and improve it.": "",
+  "From time to time we may send you updates or other information about our Service by email. By signing up, you agree to us sending you these emails. You can always unsubscribe with the link at the bottom of the emails or by contacting us at the details below.": "",
+  "We may evaluate anonymous statistics from the data you provide. For instance, we may monitor the total number of registered companies, their average size, average number of shareholders and other related information. We may display this information publicly or provide it to others. However, Ledgy does not disclose Personal Data other than as described below.": "",
+  "In case you only visit our website": "",
+  "We use Google Analytics and Google Tag Manager on our Website to evaluate visitors’ use of our Sites. Google Analytics and Tag Manager use cookies to collect standard visitors’ information in an anonymous format and generate aggregated reports. The information generated using cookies about your use of the website (including IP address) is transmitted to Google. It is not used for marketing or advertising by Google. Ledgy will not associate any data gathered from this site with any Personal Data from any source associated with you. This anonymous data is automatically deleted within 26 months.": "",
+  "We don’t share company information like share ledger transactions with anyone.": "",
+  "Ledgy discloses Personal Data only to those of its employees and third party contractors that (i) need to know that information in order to process it on Ledgy’s behalf or to provide services available at Ledgy’s websites (“Third Party Contractors”), and (ii) that have agreed not to disclose it to others by law.": "",
+  "Other than to its employees and Third Party Contractors, as described above, Ledgy discloses Personal Data only in response to a court order or other governmental request, or when Ledgy believes in good faith that disclosure is reasonably necessary to protect the property or rights of Ledgy or third parties.": "",
+  "Third Party Contractors used by Ledgy": "",
+  "We do our best to limit the information shared with Third Party Contractors. We share some limited Personal Data with trusted third-party services, which we use to run our software and improve our Service for you. This excludes company information.": "",
+  "The data shared with these Third Party Contractors might be stored outside Switzerland. You agree to those data transfers to Third Party Contractors outside of Switzerland, if the data transfer is necessary for providing our Services and under the condition, that these Third Party Contractors are compliant with GDPR (European General Data Protection Regulation).": "",
+  "<0>MailChimp</0>: We use MailChimp to send you updates from time to time, for which Ledgy gives them your name and email address.": "",
+  "<0>Sentry</0>: In case a problem occurs while you use the Service, Sentry will send us a notification. The data shared with Sentry includes the error stack trace and general device information available from your browser like its version and the operating system. If you choose to, you can transmit an explanation of the error through Sentry. Having all this information allows us to fix possible problems as fast as possible.": "",
+  "<0>Mixpanel</0>: We monitor the activity log generated when you are logged in using Mixpanel. We do this to understand how our service is used and what we can be improve. The processed information includes the name, time and which features you use.": "",
+  "<0>Segment</0>: We manage the integrations described above with Segment. Therefore all the information shared with the Third Party Contractors above, are also shared with Segment.": "",
+  "<0>Freshchat</0>: To offer real-time chat support we use Freshchat, which stores data GDPR compliant in Europe only.": "",
+  "Business transfers": "",
+  "If Ledgy, or substantially all of its assets, were acquired, or in the unlikely event that Ledgy goes out of business or enters bankruptcy, user information would be one of the assets that are transferred or acquired by a third party. You acknowledge that such transfers may occur and that any acquirer of Ledgy may continue to use your data as outlined in this Privacy Policy.": "",
+  "Your choices": "",
+  "You may always refuse to supply Personal Data, with the caveat that it may prevent you from using some of the functionality. You may correct the Personal Data in your account using our website. You may use the export functionality of our Service to retrieve all the information (including Personal Data) in a machine-readable format. You may always request to delete your Personal Data. To do so, please use the contact details below.": "",
+  "Privacy policy changes": "",
+  "Although most changes are likely to be minor, Ledgy may change its Privacy Policy from time to time, and in Ledgy’s sole discretion. Ledgy will notify you of any changes to its Privacy Policy.": "",
+  "Please contact us if you have any questions about our Privacy Policy, in case you want to delete any Personal Data or regarding any other privacy-related manners. You can reach our Data Security Officer via <0>data@ledgy.com</0> or at the following address:": "",
+  "Data Security Officer": "",
+  "If you have any questions or discover anything suspicious, please <0>get in touch</0>.": "",
   "Learn more about": "Erfahre mehr über",
   "Features": "Funktionen",
   "Discover more about Ledgy": "Erfahre mehr über Ledgy",
@@ -43,10 +91,6 @@
   "Contact": "Kontakt",
   "Let’s Get In Touch": "Wir sind für dich da",
   "Here are the ways you can contact us with any questions you have": "Hier sind die Möglichkeiten, wie du uns bei Fragen kontaktieren kannst",
-  "Your name": "Dein Name",
-  "Your email": "Deine E-Mail",
-  "Your message": "Deine Nachricht",
-  "Send message": "Nachricht schicken",
   "Imprint": "Impressum",
   "Switzerland": "Schweiz",
   "VAT number": "VAT-Nummer",
@@ -133,7 +177,6 @@
   "See the demo": "Teste die Demo",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
   "You’re in good company": "Du befindest dich in guter Gesellschaft",
-  "Many successful companies already use Ledgy to manage their ownership.": "Viele erfolgreiche Unternehmen nutzen bereits Ledgy für die Verwaltung ihrer Beteiligungen",
   "Find out why they trust us": "Warum sie uns vertrauen",
   "Ledgy is free": "Ledgy ist kostenlos.",
   "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Unser Bestreben ist, Gründern das Leben zu erleichtern. Wir wollen so vielen Menschen wie möglich unsere Cap Table-Lösung zur Verfügung stellen. In der aktuellen Phase ist es uns lieber, die Bedürfnisse unserer Nutzer zu verstehen, als ein paar Zahlen auf unser Bankkonto zu schreiben. Wir behalten uns vor, in Zukunft kostenpflichtige Premium-Funktionen einzuführen. Die Grundversion der Software wird jedoch für immer kostenlos bleiben.",
@@ -165,33 +208,10 @@
   "Two-Factor Authentication": "Zwei-Faktor-Authentifizierung",
   "Audit Trails": "Audit-Trails",
   "24/7 Support": "24/7-Support",
-  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. And we also know how little anyone likes to read long and hard to understand privacy policies. So we give you a human-readable overview up-front.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre sehr ernst. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb findest du hier als allererstes eine einfache, leicht verständliche Übersicht.",
-  "What we collect": "Was wir sammeln",
-  "Your login information": "Deine Login-Daten",
-  "Name, email, encrypted password": "Name, E-Mail, verschlüsseltes Passwort",
   "Company information": "Firmendaten",
-  "Names, addresses, and stakes of each shareholder": "Namen, Adressen, und Anteile der jeweiligen Aktionäre",
-  "General activity": "Allgemeine Aktivität",
-  "Name, time, and which action you perform when using the app to understand and improve our service": "Name, Zeit, und welche Aktionen du ausführst, während du die App benutzt, damit wir unseren Dienst stets verbessern können",
-  "Device and browser specs": "Geräte- und Browserspezifikation",
   "In case a crash happens, which helps us to fix it as fast as possible": "Falls unsere App abstürzt, damit wir den Fehler so schnell wie möglich beheben können",
-  "Who we share it with": "Mit wem wir es teilen",
   "Your shareholders": "Deine Aktionäre",
-  "If you add them with an email address, shareholders can see their own stake in your company. No further details.": "Falls du sie mit E-Mail-Adresse einträgst, können sie ihre eigenen Anteile in deiner Firma sehen. Keine weiteren Details.",
-  "Third-party integrations": "Integrierte Drittanbieter",
-  "Which we use to run and improve our service for you. It contains no cap table or other sensitive data.": "Die wir benutzen, um unseren Dienst zu betreiben und für dich zu verbessen. Sie enthalten keine Daten zum Aktienregister oder andere sensible Informationen.",
-  "Ad networks": "Werbenetzwerke",
-  "We don’t sell any data for ads": "Wir verkaufen keine Daten für Werbung",
-  "Data resellers": "Data Resellers",
-  "We don’t sell any data in general": "Wir verkaufen generell keine Daten",
-  "How we treat your data": "Wie wir deine Daten behandeln",
-  "Stored in the EU": "Alle Daten in der EU",
-  "Your cap table data is stored at an <0>independent provider</0> in Paris, France": "Dein Aktienregister ist bei einem <0>unabhängigen Anbieter</0> in Frankreich, Paris gespeichert",
   "Backups": "Backups",
-  "Regular backups ensure nothing is ever lost": "Regelmäßige Backups stellen sicher, dass nichts verloren gehen kann",
-  "Highest security standards give you peace of mind. <0>Read more  <1/></0>": "Dank höchsten Sicherheitsstandards wirst du immer ruhig schafen können. <0>Mehr erfahren <1/></0>",
-  "Want to delete your data?": "Willst du deine Daten löschen?",
-  "Please <0>get in touch with us</0>": "<0>Kontaktiere</0> uns einfach",
   "At Ledgy we take your security seriously. Strong passwords, robust encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.": "Wir bei Ledgy nehmen deine Sicherheit ernst. Sichere Passwörter, solide Verschlüsselung, Zwei-Factor-Authentifizierung, und permanente Code-Reviews gehören zu unserern hohen Sicherheitsstandards. Erfahre mehr darüber, warum du mit gutem Gewissen deinen Cap Table mit Ledgy verwalten kannst.",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. Here is what we do to protect your data.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. So schützen wir deine Daten:",
   "Strong passwords": "Sichere Passwörter",
@@ -208,6 +228,5 @@
   "The site is accessible only through HTTPS (<0>A+ rating</0>)": "Unsere Seite ist ausschließlich über HTTPS erreichbar (<0>A+-Rating</0>)",
   "Content-Security-Policy": "Content-Security-Policy",
   "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)": "HTTP-Header verhindern Cross-Site-Scripting und Code-Injection (<0>A+-Rating</0>)",
-  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass nichts verloren gehen kann",
-  "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "Falls du Fragen hast, oder dir irgendetwas Eigenartiges auffält, <0>kontaktiere uns</0>!"
+  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass nichts verloren gehen kann"
 }
