--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,21 +1,22 @@
 {
-  "We’re hiring!": "",
-  "Many successful companies already use Ledgy to manage their ownership": "",
-  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not nice, so we give an overview up-front.": "",
-  "What we may collect and why": "",
-  "User information": "",
-  "Name, email, encrypted password and any other details you provide": "",
-  "Usage statistics": "",
-  "Name, time, and which features you use to understand and improve our service": "",
-  "Browser information": "",
-  "Company name, and other company details. To properly use our Service you may enter the share ledger transactions and other cap table details.": "",
-  "How we protect your information": "",
-  "We live up to highest security standards. We improve them continuously. <0>Check out what we do  <1/></0>": "",
-  "User information, usage statistics and browser information": "",
-  "We limit access and sharing as much as reasonably possible.": "",
-  "Nobody has any access to the company information you provide.": "",
-  "Who we share your information with": "",
-  "Third Party Contractors": "",
+  "We’re hiring!": "Wir suchen Verstärkung!",
+  "Many successful companies already use Ledgy to manage their ownership": "Viele erfolgreiche Unternehmen verwenden Ledgy bereits für das Verwalten ihrer Beteiligungen",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not very helpful, so we give an overview up-front.": "Uns ist bewusst, wie sensitiv Cap Table Informationen für jedes Unternehmen sind. Deshalb nehmen wir die Privatsphäre und Sicherheit deiner Daten sehr ernst. Wir wissen auch, dass lange und komplizierte Datenschutzrichtlinien nicht sehr hilfreich sind, deshalb geben wir im Voraus einen Überblick.",
+  "What we may collect and why": "Welche Daten wir sammeln und warum",
+  "User information": "Nutzerdaten",
+  "Name, email, encrypted password and any other details you provide": "Name, E-Mail, verschlüsseltes Passwort und alle anderen von dir angegebenen Daten",
+  "Usage statistics": "Nutzungsstatistiken",
+  "Name, time, and which features you use to understand and improve our service": "Name, Uhrzeit und welche Funktionen du verwendest, um unseren Service zu verstehen und zu verbessern",
+  "Browser information": "Browser Informationen",
+  "Company name, and other company details. To properly use our Service you may enter the share ledger transactions and other cap table details.": "Firmenname und andere Firmendetails. Um unseren Service ordnungsgemäss nutzen zu können, kannst du die Aktien-Transaktionen und andere Cap Table Details eingeben.",
+  "How we protect your information": "Wie wir deine Informationen schützen",
+  "We live up to highest security standards. We improve them continuously. <0>Check out what we do  <1/></0>": "Wir erfüllen höchste Sicherheitsstandards. Wir verbessern sie kontinuierlich. <0> Was wir tun <1 /> </ 0>",
+  "User information, usage statistics and browser information": "Benutzerinformationen, Nutzungsstatistiken und Browser-Informationen",
+  "We limit access and sharing as much as reasonably possible.": "Wir beschränken den Zugriff und das Teilen so weit wie möglich",
+  "Nobody has any access to the company information you provide.": "Niemand hat Zugriff auf die Unternehmensinformationen.",
+  "Who we share your information with": "An wen wir Daten weitergeben",
+  "Third Party Contractors": "Drittanbieter",
+
   "Which we use to run and improve our Service for you. This excludes company information. <0>See which ones below <1/></0>": "",
   "If you add them with their email address and they decide to sign up on Ledgy, shareholders can see their stake in your company and its latest valuation.": "",
   "The details": "",
@@ -38,15 +39,16 @@
   "<0>Mixpanel</0>: We monitor the activity log generated when you are logged in using Mixpanel. We do this to understand how our service is used and what we can be improve. The processed information includes the name, time and which features you use.": "",
   "<0>Segment</0>: We manage the integrations described above with Segment. Therefore all the information shared with the Third Party Contractors above, are also shared with Segment.": "",
   "<0>Freshchat</0>: To offer real-time chat support we use Freshchat, which stores data GDPR compliant in Europe only.": "",
-  "Business transfers": "",
-  "If Ledgy, or substantially all of its assets, were acquired, or in the unlikely event that Ledgy goes out of business or enters bankruptcy, user information would be one of the assets that are transferred or acquired by a third party. You acknowledge that such transfers may occur and that any acquirer of Ledgy may continue to use your data as outlined in this Privacy Policy.": "",
-  "Your choices": "",
-  "You may always refuse to supply Personal Data, with the caveat that it may prevent you from using some of the functionality. You may correct the Personal Data in your account using our website. You may use the export functionality of our Service to retrieve all the information (including Personal Data) in a machine-readable format. You may always request to delete your Personal Data. To do so, please use the contact details below.": "",
-  "Privacy policy changes": "",
-  "Although most changes are likely to be minor, Ledgy may change its Privacy Policy from time to time, and in Ledgy’s sole discretion. Ledgy will notify you of any changes to its Privacy Policy.": "",
-  "Please contact us if you have any questions about our Privacy Policy, in case you want to delete any Personal Data or regarding any other privacy-related manners. You can reach our Data Security Officer via <0>data@ledgy.com</0> or at the following address:": "",
-  "Data Security Officer": "",
-  "If you have any questions or discover anything suspicious, please <0>get in touch</0>.": "",
+  "Unternehmensverkäufe": "",
+
+  "If Ledgy, or substantially all of its assets, were acquired, or in the unlikely event that Ledgy goes out of business or enters bankruptcy, user information would be one of the assets that are transferred to or acquired by a third party. You acknowledge that such transfers may occur and that any acquirer of Ledgy may continue to use your data as outlined in this Privacy Policy.": "Wenn Ledgy oder ein Grossteil seiner Vermögenswerte erworben würden, oder in dem unwahrscheinlichen Fall, dass Ledgy Konkurs anmeldet, wären Benutzerinformationen eines der Vermögenswerte, die von einem Dritten erworben werden. Du akzeptierst, dass solche Übertragungen vorkommen können und dass ein Erwerber von Ledgy deine Daten weiterhin gemäss dieser Datenschutzrichtlinie verwenden darf.",
+  "Your choices": "Deine Möglichkeiten",
+  "You may always refuse to supply Personal Data, with the caveat that it may prevent you from using some of the functionality. You may correct the Personal Data in your account using our website. You may use the export functionality of our Service to retrieve all the information (including Personal Data) in a machine-readable format. You may always request to delete your Personal Data. To do so, please use the contact details below.": "Du kannst natürlich personenbezogene Daten gar nicht erst übermitteln. Allerdings kann es dann sein, dass du manche Funktionen nicht nutzen kannst. Du kannst die persönlichen Daten in deinem Konto korrigieren. Du kannst die Exportfunktion unseres Services verwenden, um alle Informationen (einschließlich personenbezogener Daten) in einem maschinenlesbaren Format abzurufen. Deine persönlichen Daten kannst du jederzeit löschen. Wenn das dein Wunsch ist, kontaktiere uns mit untenstehenden Kontaktdaten.",
+  "Privacy policy changes": "Änderung der Datenschutzrichtlinie",
+  "Although most changes are likely to be minor, Ledgy may change its Privacy Policy from time to time, and in Ledgy’s sole discretion. Ledgy will notify you of any changes to its Privacy Policy.": "Auch wenn die meisten Änderungen klein sein werden, kann Ledgy seine Datenschutzrichtlinien von Zeit zu Zeit und nach alleinigem Ermessen von Ledgy ändern. Ledgy wird dich über Änderungen seiner Datenschutzrichtlinie informieren.",
+  "Please contact us if you have any questions about our Privacy Policy, in case you want to delete any Personal Data or regarding any other privacy-related manners. You can reach our Data Security Officer via <0>contact@ledgy.com</0> or at the following address:": "Kontaktiere uns, wenn du Fragen zu unserer Datenschutzrichtlinie hast oder falls du persönliche Daten löschen möchtest. Du erreichst unsere Datenschutzbeauftragte unter contact@ledgy.com oder unter folgender Adresse:",
+  "Data Security Officer": "Datenschutzbeauftragte",
+  "If you have any questions or discover anything suspicious, please <0>get in touch</0>.": "Wenn du Fragen hast oder irgend etwas Verdächtiges entdeckst, melde dich bei uns.",
   "Learn more about": "Erfahre mehr über",
   "Features": "Funktionen",
   "Discover more about Ledgy": "Erfahre mehr über Ledgy",
