--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,54 +1,4 @@
 {
-  "We’re hiring!": "Wir suchen Verstärkung!",
-  "Many successful companies already use Ledgy to manage their ownership": "Viele erfolgreiche Unternehmen verwenden Ledgy bereits für das Verwalten ihrer Beteiligungen",
-  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not very helpful, so we give an overview up-front.": "Uns ist bewusst, wie sensitiv Cap Table Informationen für jedes Unternehmen sind. Deshalb nehmen wir die Privatsphäre und Sicherheit deiner Daten sehr ernst. Wir wissen auch, dass lange und komplizierte Datenschutzrichtlinien nicht sehr hilfreich sind, deshalb geben wir im Voraus einen Überblick.",
-  "What we may collect and why": "Welche Daten wir sammeln und warum",
-  "User information": "Nutzerdaten",
-  "Name, email, encrypted password and any other details you provide": "Name, E-Mail, verschlüsseltes Passwort und alle anderen von dir angegebenen Daten",
-  "Usage statistics": "Nutzungsstatistiken",
-  "Name, time, and which features you use to understand and improve our service": "Name, Uhrzeit und welche Funktionen du verwendest, um unseren Service zu verstehen und zu verbessern",
-  "Browser information": "Browser Informationen",
-  "Company name, and other company details. To properly use our Service you may enter the share ledger transactions and other cap table details.": "Firmenname und andere Firmendetails. Um unseren Service ordnungsgemäss nutzen zu können, kannst du die Aktien-Transaktionen und andere Cap Table Details eingeben.",
-  "How we protect your information": "Wie wir deine Informationen schützen",
-  "We live up to highest security standards. We improve them continuously. <0>Check out what we do  <1/></0>": "Wir erfüllen höchste Sicherheitsstandards. Wir verbessern sie kontinuierlich. <0> Was wir tun <1 /> </ 0>",
-  "User information, usage statistics and browser information": "Benutzerinformationen, Nutzungsstatistiken und Browser-Informationen",
-  "We limit access and sharing as much as reasonably possible.": "Wir beschränken den Zugriff und das Teilen so weit wie möglich",
-  "Nobody has any access to the company information you provide.": "Niemand hat Zugriff auf die Unternehmensinformationen.",
-  "Who we share your information with": "An wen wir Daten weitergeben",
-  "Third Party Contractors": "Drittanbieter",
-
-  "Which we use to run and improve our Service for you. This excludes company information. <0>See which ones below <1/></0>": "",
-  "If you add them with their email address and they decide to sign up on Ledgy, shareholders can see their stake in your company and its latest valuation.": "",
-  "The details": "",
-  "Ledgy AG (“Ledgy”, “we”) is a technology company that provides software as a service (“Service”) to you, its customers. This Privacy Policy describes how we collect and use personal information (“Personal Data”) for providing our Service and operating our website. It also describes your choices and how you can get in touch with us.": "",
-  "When you decide to sign up on Ledgy": "",
-  "We may collect user information, usage statistics and browser information (“Personal Data”) as outlined above. To use our Service at its best, you may enter the share ledger transactions and other cap table details. Please note: We strictly separate Personal Data from company information. Nobody has any access to your company information.": "",
-  "We only use this Personal Data to provide you with our Service and improve it.": "",
-  "From time to time we may send you updates or other information about our Service by email. By signing up, you agree to us sending you these emails. You can always unsubscribe with the link at the bottom of the emails or by contacting us at the details below.": "",
-  "We may evaluate anonymous statistics from the data you provide. For instance, we may monitor the total number of registered companies, their average size, average number of shareholders and other related information. We may display this information publicly or provide it to others. However, Ledgy does not disclose Personal Data other than as described below.": "",
-  "In case you only visit our website": "",
-  "We use Google Analytics and Google Tag Manager on our Website to evaluate visitors’ use of our Sites. Google Analytics and Tag Manager use cookies to collect standard visitors’ information in an anonymous format and generate aggregated reports. The information generated using cookies about your use of the website (including IP address) is transmitted to Google. It is not used for marketing or advertising by Google. Ledgy will not associate any data gathered from this site with any Personal Data from any source associated with you. This anonymous data is automatically deleted within 26 months.": "",
-  "We don’t share company information like share ledger transactions with anyone.": "",
-  "Ledgy discloses Personal Data only to those of its employees and third party contractors that (i) need to know that information in order to process it on Ledgy’s behalf or to provide services available at Ledgy’s websites (“Third Party Contractors”), and (ii) that have agreed not to disclose it to others by law.": "",
-  "Other than to its employees and Third Party Contractors, as described above, Ledgy discloses Personal Data only in response to a court order or other governmental request, or when Ledgy believes in good faith that disclosure is reasonably necessary to protect the property or rights of Ledgy or third parties.": "",
-  "Third Party Contractors used by Ledgy": "",
-  "We do our best to limit the information shared with Third Party Contractors. We share some limited Personal Data with trusted third-party services, which we use to run our software and improve our Service for you. This excludes company information.": "",
-  "The data shared with these Third Party Contractors might be stored outside Switzerland. You agree to those data transfers to Third Party Contractors outside of Switzerland, if the data transfer is necessary for providing our Services and under the condition, that these Third Party Contractors are compliant with GDPR (European General Data Protection Regulation).": "",
-  "<0>MailChimp</0>: We use MailChimp to send you updates from time to time, for which Ledgy gives them your name and email address.": "",
-  "<0>Sentry</0>: In case a problem occurs while you use the Service, Sentry will send us a notification. The data shared with Sentry includes the error stack trace and general device information available from your browser like its version and the operating system. If you choose to, you can transmit an explanation of the error through Sentry. Having all this information allows us to fix possible problems as fast as possible.": "",
-  "<0>Mixpanel</0>: We monitor the activity log generated when you are logged in using Mixpanel. We do this to understand how our service is used and what we can be improve. The processed information includes the name, time and which features you use.": "",
-  "<0>Segment</0>: We manage the integrations described above with Segment. Therefore all the information shared with the Third Party Contractors above, are also shared with Segment.": "",
-  "<0>Freshchat</0>: To offer real-time chat support we use Freshchat, which stores data GDPR compliant in Europe only.": "",
-  "Unternehmensverkäufe": "",
-
-  "If Ledgy, or substantially all of its assets, were acquired, or in the unlikely event that Ledgy goes out of business or enters bankruptcy, user information would be one of the assets that are transferred to or acquired by a third party. You acknowledge that such transfers may occur and that any acquirer of Ledgy may continue to use your data as outlined in this Privacy Policy.": "Wenn Ledgy oder ein Grossteil seiner Vermögenswerte erworben würden, oder in dem unwahrscheinlichen Fall, dass Ledgy Konkurs anmeldet, wären Benutzerinformationen eines der Vermögenswerte, die von einem Dritten erworben werden. Du akzeptierst, dass solche Übertragungen vorkommen können und dass ein Erwerber von Ledgy deine Daten weiterhin gemäss dieser Datenschutzrichtlinie verwenden darf.",
-  "Your choices": "Deine Möglichkeiten",
-  "You may always refuse to supply Personal Data, with the caveat that it may prevent you from using some of the functionality. You may correct the Personal Data in your account using our website. You may use the export functionality of our Service to retrieve all the information (including Personal Data) in a machine-readable format. You may always request to delete your Personal Data. To do so, please use the contact details below.": "Du kannst natürlich personenbezogene Daten gar nicht erst übermitteln. Allerdings kann es dann sein, dass du manche Funktionen nicht nutzen kannst. Du kannst die persönlichen Daten in deinem Konto korrigieren. Du kannst die Exportfunktion unseres Services verwenden, um alle Informationen (einschließlich personenbezogener Daten) in einem maschinenlesbaren Format abzurufen. Deine persönlichen Daten kannst du jederzeit löschen. Wenn das dein Wunsch ist, kontaktiere uns mit untenstehenden Kontaktdaten.",
-  "Privacy policy changes": "Änderung der Datenschutzrichtlinie",
-  "Although most changes are likely to be minor, Ledgy may change its Privacy Policy from time to time, and in Ledgy’s sole discretion. Ledgy will notify you of any changes to its Privacy Policy.": "Auch wenn die meisten Änderungen klein sein werden, kann Ledgy seine Datenschutzrichtlinien von Zeit zu Zeit und nach alleinigem Ermessen von Ledgy ändern. Ledgy wird dich über Änderungen seiner Datenschutzrichtlinie informieren.",
-  "Please contact us if you have any questions about our Privacy Policy, in case you want to delete any Personal Data or regarding any other privacy-related manners. You can reach our Data Security Officer via <0>contact@ledgy.com</0> or at the following address:": "Kontaktiere uns, wenn du Fragen zu unserer Datenschutzrichtlinie hast oder falls du persönliche Daten löschen möchtest. Du erreichst unsere Datenschutzbeauftragte unter contact@ledgy.com oder unter folgender Adresse:",
-  "Data Security Officer": "Datenschutzbeauftragte",
-  "If you have any questions or discover anything suspicious, please <0>get in touch</0>.": "Wenn du Fragen hast oder irgend etwas Verdächtiges entdeckst, melde dich bei uns.",
   "Learn more about": "Erfahre mehr über",
   "Features": "Funktionen",
   "Discover more about Ledgy": "Erfahre mehr über Ledgy",
@@ -84,6 +34,7 @@
   "Computer vision background, badminton guy, wants to build a space elevator": "Computer Vision Hintergrund, Badminton-Typ, will einen Weltraumlift bauen",
   "Battery science background, martial arts, fascinated by electric cars": "Hintergrund in Batteriewissenschaften, Martial Arts, fasziniert von Elektroautos",
   "Medical physics background, loves running, wondering about brain-machine interfaces": "Medical Physics-Hintergrund, liebt das Laufen und denkt über Brain-Machine Interfaces nach",
+  "We’re hiring!": "Wir suchen Verstärkung!",
   "Board and Advisors": "Board und Advisors",
   "Entrepreneur, Business Angel, Founder of Doodle.com": "Unternehmer, Business Angel, Gründer von Doodle.com",
   "Entrepreneur, Technologist, Founder of Doodle.com": "Unternehmer, Technologe, Gründer von Doodle.com",
@@ -93,7 +44,6 @@
   "Contact": "Kontakt",
   "Let’s Get In Touch": "Wir sind für dich da",
   "Here are the ways you can contact us with any questions you have": "Hier sind die Möglichkeiten, wie du uns bei Fragen kontaktieren kannst",
-  "Imprint": "Impressum",
   "Switzerland": "Schweiz",
   "VAT number": "VAT-Nummer",
   "Managing directors": "Geschäftsleitung",
@@ -172,6 +122,7 @@
   "Read more": "Mehr erfahren",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Deine Daten sind bei uns sicher. Genieße die höchste Sicherheitsstandards.",
   "Illustrations by": "Illustrationen von",
+  "Imprint": "Impressum",
   "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
   "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>Are you an investor or employee? Get a comprehensive overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
@@ -179,6 +130,7 @@
   "See the demo": "Teste die Demo",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
   "You’re in good company": "Du befindest dich in guter Gesellschaft",
+  "Many successful companies already use Ledgy to manage their ownership": "Viele erfolgreiche Unternehmen verwenden Ledgy bereits für das Verwalten ihrer Beteiligungen",
   "Find out why they trust us": "Warum sie uns vertrauen",
   "Ledgy is free": "Ledgy ist kostenlos.",
   "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Unser Bestreben ist, Gründern das Leben zu erleichtern. Wir wollen so vielen Menschen wie möglich unsere Cap Table-Lösung zur Verfügung stellen. In der aktuellen Phase ist es uns lieber, die Bedürfnisse unserer Nutzer zu verstehen, als ein paar Zahlen auf unser Bankkonto zu schreiben. Wir behalten uns vor, in Zukunft kostenpflichtige Premium-Funktionen einzuführen. Die Grundversion der Software wird jedoch für immer kostenlos bleiben.",
@@ -210,10 +162,26 @@
   "Two-Factor Authentication": "Zwei-Faktor-Authentifizierung",
   "Audit Trails": "Audit-Trails",
   "24/7 Support": "24/7-Support",
-  "Company information": "Firmendaten",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not very helpful, so we give an overview up-front.": "Uns ist bewusst, wie sensitiv Cap Table-Informationen für jedes Unternehmen sind. Deshalb nehmen wir die Privatsphäre und Sicherheit deiner Daten sehr ernst. Wir wissen auch, dass lange und komplizierte Datenschutzrichtlinien nicht hilfreich sind, deshalb geben wir im Voraus einen Überblick.",
+  "What we may collect and why": "Welche Daten wir sammeln und warum",
+  "User information": "Nutzerdaten",
+  "Name, email, encrypted password and any other details you provide": "Name, E-Mail, verschlüsseltes Passwort und alle anderen von dir angegebenen Daten",
+  "Usage statistics": "Nutzungsstatistiken",
+  "Name, time, and which features you use to understand and improve our service": "Name, Uhrzeit und welche Funktionen du verwendest, um unseren Service zu verstehen und zu verbessern",
+  "Browser information": "Browser-Informationen",
   "In case a crash happens, which helps us to fix it as fast as possible": "Falls unsere App abstürzt, damit wir den Fehler so schnell wie möglich beheben können",
+  "Company information": "Firmendaten",
+  "Company name, and other company details. To properly use our Service you may enter the share ledger transactions and other cap table details.": "Firmenname und andere Firmendetails. Um unseren Service ordnungsgemäss nutzen zu können, kannst du die Aktien-Transaktionen und andere Cap Table-Details eingeben.",
+  "How we protect your information": "Wie wir deine Informationen schützen",
+  "We live up to highest security standards. We improve them continuously. <0>Check out what we do  <1/></0>": "Wir erfüllen höchste Sicherheitsstandards. Und verbessern sie kontinuierlich. <0>Was wir tun <1/></0>",
+  "User information, usage statistics and browser information": "Benutzerinformationen, Nutzungsstatistiken und Browser-Informationen",
+  "We limit access and sharing as much as reasonably possible.": "Wir beschränken den Zugriff und das Teilen so weit wie möglich",
+  "Nobody has any access to the company information you provide.": "Niemand hat Zugriff auf die Unternehmensinformationen.",
+  "Who we share your information with": "An wen wir Daten weitergeben",
+  "Third Party Contractors": "Drittanbieter",
+  "Which we use to run and improve our Service for you. This excludes company information. <0>See which ones below <1/></0>": "Die wir benutzen, um unseren Dienst zu betreiben und stets zu verbessern. Dies beinhaltet keine Unternehmensinformationen. <0>Siehe unten für Details <1/></0>",
   "Your shareholders": "Deine Aktionäre",
-  "Backups": "Backups",
+  "If you add them with their email address and they decide to sign up on Ledgy, shareholders can see their stake in your company and its latest valuation.": "Falls du sie mit einer E-Mail-Adresse einträgst und sie sich bei Ledgy anmelden, können Aktionäre ihren eigenen Anteil in deiner Firma sehen, sowie die aktuelle Bewertung.",
   "At Ledgy we take your security seriously. Strong passwords, robust encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.": "Wir bei Ledgy nehmen deine Sicherheit ernst. Sichere Passwörter, solide Verschlüsselung, Zwei-Factor-Authentifizierung, und permanente Code-Reviews gehören zu unserern hohen Sicherheitsstandards. Erfahre mehr darüber, warum du mit gutem Gewissen deinen Cap Table mit Ledgy verwalten kannst.",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. Here is what we do to protect your data.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. So schützen wir deine Daten:",
   "Strong passwords": "Sichere Passwörter",
@@ -230,5 +198,7 @@
   "The site is accessible only through HTTPS (<0>A+ rating</0>)": "Unsere Seite ist ausschließlich über HTTPS erreichbar (<0>A+-Rating</0>)",
   "Content-Security-Policy": "Content-Security-Policy",
   "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)": "HTTP-Header verhindern Cross-Site-Scripting und Code-Injection (<0>A+-Rating</0>)",
-  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass nichts verloren gehen kann"
+  "Backups": "Backups",
+  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass nichts verloren gehen kann",
+  "If you have any questions or discover anything suspicious, please <0>get in touch</0>.": "Wenn du Fragen hast oder irgend etwas Verdächtiges entdeckst, melde dich bei uns."
 }
