--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,4 +1,5 @@
 {
+  "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!": "Du findest, für Google zu arbeiten ist langweilig, weil sie in den nächsten 4 Jahren nicht um das 100-fache wachsen werden? Eine Software zu entwickeln ist cool, aber wie wäre es ein ganzes Team darum aufzubauen? Du bist ein Web-Entwickler, der noch beim Frühstücken die letzten Bugs fixt? Du bist fasziniert von modernster Technologie wie React, Blockchain und Weltraumaufzügen?<0/><1/>Dann lass uns auf einen Kaffee treffen!",
   "Learn more about": "Erfahre mehr über",
   "Features": "Funktionen",
   "Discover more about Ledgy": "Erfahre mehr über Ledgy",
