--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,4 +1,5 @@
 {
+  "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!": "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!",
   "Learn more about": "Learn more about",
   "Features": "Features",
   "Discover more about Ledgy": "Discover more about Ledgy",
