--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,5 +1,4 @@
 {
-  "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!": "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!",
   "Learn more about": "Learn more about",
   "Features": "Features",
   "Discover more about Ledgy": "Discover more about Ledgy",
@@ -36,12 +35,42 @@
   "Battery science background, martial arts, fascinated by electric cars": "Battery science background, martial arts, fascinated by electric cars",
   "Medical physics background, loves running, wondering about brain-machine interfaces": "Medical physics background, loves running, wondering about brain-machine interfaces",
   "We’re hiring!": "We’re hiring!",
+  "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!": "Do you feel working for Google is boring because they don’t grow by 100× during the next four years? Building a product is fantastic, but how about creating a whole team around it? Are you a web developer that eats bugs for breakfast? Fascinated by cutting-edge technology like React, blockchain or space elevators?<0/><1/>Then let’s have coffee together!",
   "Board and Advisors": "Board and Advisors",
   "Entrepreneur, Business Angel, Founder of Doodle.com": "Entrepreneur, Business Angel, Founder of Doodle.com",
   "Entrepreneur, Technologist, Founder of Doodle.com": "Entrepreneur, Technologist, Founder of Doodle.com",
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala",
   "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch": "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch",
   "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch": "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch",
+  "All Features": "All Features",
+  "Ledgy can do a lot for you—and more features are constantly being developed. Most current features are listed below. Get in touch if your favorite feature is missing, we love to hear feedback.": "Ledgy can do a lot for you—and more features are constantly being developed. Most current features are listed below. Get in touch if your favorite feature is missing, we love to hear feedback.",
+  "Cap Table on Steroids": "Cap Table on Steroids",
+  "Funding Round Modeling": "Funding Round Modeling",
+  "Full Transaction History": "Full Transaction History",
+  "Consistency Checks": "Consistency Checks",
+  "Transaction Filters": "Transaction Filters",
+  "Convertible Loans": "Convertible Loans",
+  "Stock Split": "Stock Split",
+  "Unlimited Share Classes": "Unlimited Share Classes",
+  "Numbered shares": "Numbered shares",
+  "Employee Incentives": "Employee Incentives",
+  "Employee Options": "Employee Options",
+  "Approved Capital Pools": "Approved Capital Pools",
+  "Vesting Schedules": "Vesting Schedules",
+  "Fully-diluted View": "Fully-diluted View",
+  "Employee Login": "Employee Login",
+  "Multiple Administrators": "Multiple Administrators",
+  "Read-only Access": "Read-only Access",
+  "Investor Dashboard": "Investor Dashboard",
+  "And Much More": "And Much More",
+  "Secure Document Storage": "Secure Document Storage",
+  "Attach Documents to Transactions": "Attach Documents to Transactions",
+  "Spreadsheet Import": "Spreadsheet Import",
+  "Customizable PDF Reports": "Customizable PDF Reports",
+  "CSV Export": "CSV Export",
+  "Send Holding Confirmations": "Send Holding Confirmations",
+  "Two-Factor Authentication": "Two-Factor Authentication",
+  "Audit Trails": "Audit Trails",
   "Contact": "Contact",
   "Let’s Get In Touch": "Let’s Get In Touch",
   "Here are the ways you can contact us with any questions you have": "Here are the ways you can contact us with any questions you have",
@@ -76,7 +105,6 @@
   "Keep your employees engaged": "Keep your employees engaged",
   "Once your incentives are submitted to Ledgy, it’s time to engage your employees. They can log in to Ledgy themselves with their email address at any time and see how many shares they have already vested.": "Once your incentives are submitted to Ledgy, it’s time to engage your employees. They can log in to Ledgy themselves with their email address at any time and see how many shares they have already vested.",
   "ESOPs in the employee dashboard": "ESOPs in the employee dashboard",
-  "Investor Dashboard": "Investor Dashboard",
   "Investors love to track the progress of their companies. Help them to be excited about what you have achieved.": "Investors love to track the progress of their companies. Help them to be excited about what you have achieved.",
   "Your portfolio at a glance": "Your portfolio at a glance",
   "As an investor, you can profit a lot from Ledgy. Any of your portfolio companies that use the platform will appear on your investment dashboard. See your key performance indicators of your investments at a glance.<0/><1/>Never lose track of how much you invested in which company and what’s the approximate value of your investments today.": "As an investor, you can profit a lot from Ledgy. Any of your portfolio companies that use the platform will appear on your investment dashboard. See your key performance indicators of your investments at a glance.<0/><1/>Never lose track of how much you invested in which company and what’s the approximate value of your investments today.",
@@ -98,7 +126,6 @@
   "Bring order to your documents": "Bring order to your documents",
   "Every transaction in your share register usually comes with a pile of additional documents, like contracts. Get rid of complicated folder structures and attach them directly to your transactions. Ledgy gives you an overview of all documents that you uploaded and their corresponding transactions. Also in your transaction history, you can select any transaction and see all connected documents at a glance.<0/><1/>You can also share your documents by sending a simple link to your shareholders. This eliminates confusion about different versions of documents, as it is often the case when sending documents via email.": "Every transaction in your share register usually comes with a pile of additional documents, like contracts. Get rid of complicated folder structures and attach them directly to your transactions. Ledgy gives you an overview of all documents that you uploaded and their corresponding transactions. Also in your transaction history, you can select any transaction and see all connected documents at a glance.<0/><1/>You can also share your documents by sending a simple link to your shareholders. This eliminates confusion about different versions of documents, as it is often the case when sending documents via email.",
   "Document management": "Document management",
-  "Financing Round Modeling": "Financing Round Modeling",
   "Simulate the outcome of your upcoming financing rounds. Detailed models give you a headstart over angels and VCs.": "Simulate the outcome of your upcoming financing rounds. Detailed models give you a headstart over angels and VCs.",
   "Explore new scenarios for upcoming financing rounds interactively": "Explore new scenarios for upcoming financing rounds interactively",
   "Is your startup running well and you’re already thinking about a new financing round to fuel your growth and take your company to the next level?<0/><1/>Enter a valuation, and you will see how your convertibles apply to your cap table immediately. If your convertible has a cap, discount or an interest—Ledgy does the math for you. Add an investment and enter the value of the investment. Watch in real-time how the new investment impacts your current shareholder distribution.<2/><3/>You can find the round modeling tool directly on the <4>Cap Table</4> page.": "Is your startup running well and you’re already thinking about a new financing round to fuel your growth and take your company to the next level?<0/><1/>Enter a valuation, and you will see how your convertibles apply to your cap table immediately. If your convertible has a cap, discount or an interest—Ledgy does the math for you. Add an investment and enter the value of the investment. Watch in real-time how the new investment impacts your current shareholder distribution.<2/><3/>You can find the round modeling tool directly on the <4>Cap Table</4> page.",
@@ -119,6 +146,7 @@
   "Oh, it’s tax season again, and 50 holding confirmations are waiting to be sent to your shareholders. This means pasting names into document templates, computing the tax value of all shares… <0/>Don’t worry. Generate and send all relevant documents with a single click on Ledgy.": "Oh, it’s tax season again, and 50 holding confirmations are waiting to be sent to your shareholders. This means pasting names into document templates, computing the tax value of all shares… <0/>Don’t worry. Generate and send all relevant documents with a single click on Ledgy.",
   "the Investor Dashboard": "the Investor Dashboard",
   "Are you an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies, and you will never miss anything regarding your investments.": "Are you an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies, and you will never miss anything regarding your investments.",
+  "Discover all cap table features": "Discover all cap table features",
   "Cap table data is sensitive. That’s why we genuinely care about your privacy.": "Cap table data is sensitive. That’s why we genuinely care about your privacy.",
   "Read more": "Read more",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Your data is safe with us. Enjoy the highest security standards. No kidding.",
@@ -133,36 +161,22 @@
   "You’re in good company": "You’re in good company",
   "Many successful companies already use Ledgy to manage their ownership": "Many successful companies already use Ledgy to manage their ownership",
   "Find out why they trust us": "Find out why they trust us",
-  "Ledgy is free": "Ledgy is free",
-  "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.",
-  "If you came here looking for fancy option plans, we got you covered:": "If you came here looking for fancy option plans, we got you covered:",
+  "Ledgy scales with your needs. Free for startups, powerful for grown-ups. It’s currently free, nevertheless, this probably changes soon. If you sign up now, we’ll make sure, that our loyal first users will get a good deal.": "Ledgy scales with your needs. Free for startups, powerful for grown-ups. It’s currently free, nevertheless, this probably changes soon. If you sign up now, we’ll make sure, that our loyal first users will get a good deal.",
   "3 Dude(tte)s in a Garage": "3 Dude(tte)s in a Garage",
-  "$0": "$0",
-  "Full Transaction History": "Full Transaction History",
-  "Consistency Checks": "Consistency Checks",
-  "Convertible Loans": "Convertible Loans",
-  "Customizable PDF Reports": "Customizable PDF Reports",
-  "Unlimited Share Classes": "Unlimited Share Classes",
-  "Transaction Filters": "Transaction Filters",
-  "Numbered shares": "Numbered shares",
-  "Up to 20 shareholders": "Up to 20 shareholders",
-  "Best choice": "Best choice",
+  "Free": "Free",
+  "Up to 25 shareholders": "Up to 25 shareholders",
+  "All cap table features": "All cap table features",
+  "coming soon": "coming soon",
   "Fast-growing Startup": "Fast-growing Startup",
-  "Employee Incentives": "Employee Incentives",
-  "Vesting Schedules": "Vesting Schedules",
-  "Fully-diluted View": "Fully-diluted View",
-  "Employee Login": "Employee Login",
-  "Stock Split": "Stock Split",
-  "Unlimited shareholders": "Unlimited shareholders",
+  "€2": "€2",
+  "per shareholder per month": "per shareholder per month",
+  "Up to 50 shareholders": "Up to 50 shareholders",
+  "Free cap table import": "Free cap table import",
   "Unicorn": "Unicorn",
-  "Cap Table Import": "Cap Table Import",
-  "Document Management": "Document Management",
-  "Automated Tax Reports": "Automated Tax Reports",
-  "Multiple Administrators": "Multiple Administrators",
-  "CSV Export": "CSV Export",
-  "Two-Factor Authentication": "Two-Factor Authentication",
-  "Audit Trails": "Audit Trails",
-  "24/7 Support": "24/7 Support",
+  "€5": "€5",
+  "Unlimited shareholders": "Unlimited shareholders",
+  "Premium support": "Premium support",
+  "Unable to find your perfect fit?<0/><1>Contact sales</1> or use the chat right on this page.": "Unable to find your perfect fit?<0/><1>Contact sales</1> or use the chat right on this page.",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not very helpful, so we give an overview up-front.": "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not very helpful, so we give an overview up-front.",
   "What we may collect and why": "What we may collect and why",
   "User information": "User information",
