--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -165,7 +165,7 @@
   "3 Dude(tte)s in a Garage": "3 Leute in einer Garage",
   "Free": "Gratis",
   "Up to 25 shareholders": "Bis zu 25 Gesellschafter",
-  "All cap table features": "All Cap Table-Features",
+  "All cap table features": "Alle Cap Table-Funktionen",
   "coming soon": "Demnächst",
   "Fast-growing Startup": "Fast-growing Startup",
   "€2": "€2",
